<resources>
    <string name="app_name">Grade Recorder</string>

    <string name="about_us">\tGrade Recorder is an Application in which you can record the grade, course number (ie Android or INFO 6124), type of grade (quiz, lab, project, midterm, final), percentage worth of total grade  and the grade received.\n
	\tIt has Three Activities (Screens) :Your program must have at least three activities: one activity to record the grades as you get them, another activity to visualize all the grades received where you are able to visually distinguish grades for different courses, an activity that explains what your app does and includes your name in it.\n
\n
	\tIn Main Screen you can add the grade record on pushing the plus button, this will take you to the add grade screen where you add the details and on pushing Ok button , record is saved.\n
On the toolbar there is option for delete record which delete all the records with an alert box that require your permission.And also an option to view the About Us screen which shows details of about App .\n
\n
        <u><b>About the Developer:</b></u>\n
Developed by : Vishnu </string>

    <string name="c_name">Course Name:     </string>
    <string name="g_type">Grade Type:      </string>
    <string name="t_grades">Total Grades :       </string>
    <string name="g_rec"> Grades Recieved:     </string>
    <string name="grade_name">Grade Name</string>
    <string name="g_submitted">Grades Submitted :</string>
    <string name="g_to_date">Grades To Date :</string>
    <string name="Summary">Summary</string>
</resources>