<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="3"
    android:layout_marginBottom="1dp"
    android:layout_marginLeft="1dp"
    android:layout_marginRight="1dp">

    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >


        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingLeft="20dp"
            >

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:gravity="center"
                android:text="@string/grade_name"
                android:textColor="@color/black"
                android:textSize="12dp">

            </TextView>
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left"
                android:paddingLeft="20dp"
                >

                <TextView
                    android:id="@+id/gradeTodate"
                    android:layout_width="wrap_content"
                    android:layout_height="44dp"
                    android:gravity="center"
                    android:text="@string/g_submitted"
                    android:textColor="@color/black"
                    android:textSize="12dp">

                </TextView>
            </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:paddingLeft="20dp"
                    >

                    <TextView
                        android:id="@+id/gradesSubmitted"
                        android:layout_width="wrap_content"
                        android:layout_height="44dp"
                        android:gravity="center"
                        android:text="@string/g_to_date"
                        android:textColor="@color/black"
                        android:textSize="12dp">

                    </TextView>



        </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>